@@ -6,6 +6,10 @@ Development release ChangeLog
 		fix few compile warnings with glib and unused vars
 		now directory is open when it click filling for first time
 		fixed possible segfault on start
+		added menu option to go up
+		fixed duplicated vbox varname now is 'sidebar_vbox'
+		added configuration dialog
+		improved externally open menu
 
 
 20-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>
@@ -76,7 +80,7 @@ Development release ChangeLog
 TODO
 ---------------------------
 	(DONE) codestyle improve to be same as other parts as geany`s
-	* configuration dialog
+	(DONE) configuration dialog
 	* trackick path to current focused document
 	* Windows compitable
 	* Language files
